--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.site-title a {
+  display: block;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.site-content {
+  position: relative;
 }
